kubernetes/core/example/config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-nginx-backup
  annotations:
    argocd.argoproj.io/sync-wave: "11"
spec:
  selector:
    app: test-nginx-backup
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
